--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #082860;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,6 +18,7 @@ body {
     max-width: 900px;  
     overflow-y: auto;
     max-height: 100vh; 
+    margin-bottom: 30px;
     animation: fadeIn 1s ease-in-out;
 
 }
