--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    background-color: rgb(184, 233, 215);
 }
 
 .container {
@@ -23,7 +24,7 @@ body {
 }
 
 h1, h2 {
-    color: #082860;
+    color: rgb(26, 81, 50) ; ;;
     text-align: center;
     margin-bottom: 10px;
     text-decoration: underline;
@@ -53,12 +54,12 @@ textarea {
 
 input:focus,
 textarea:focus {
-    border-color: #2575fc;
+    border-color:  rgb(120, 174, 143); ;
     outline: none;
 }
 
 button {
-    background-color: #082860;
+    background-color: rgb(26, 81, 50) ; ;;
     color: white;
     border: none;
     padding: 8px 15px;
@@ -69,7 +70,7 @@ button {
 }
 
 button:hover {
-    background-color: #2575fc;
+    background-color: rgb(120, 174, 143); ;
 }
 
 @keyframes fadeIn {
